--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/js-cookie": "^3.0.6",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.1.9",
+    "jose": "^5.3.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
