--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.0",
+    "recharts": "^2.12.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
