--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "framer-motion": "^11.1.9",
     "jose": "^5.3.0",
     "js-cookie": "^3.0.5",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.0",
     "recharts": "^2.12.7",
