--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.0",
+    "@tanstack/react-table": "^8.17.3",
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
     "crypto-js": "^4.2.0",
