--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-table": "^8.17.3",
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
+    "autoprefixer": "^10.4.19",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.1.9",
     "jose": "^5.3.0",
