--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.0",
+    "react-qr-code": "^2.0.15",
     "recharts": "^2.12.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
